# mnemosyne

./: .dockerignore  .env.example  .gitignore  CONTRACT.md  Dockerfile  README.md  RETIRE.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: test.yml
docs/: PHASE-0.md  PHASE-2.md  proposal.schema.json
eval/: ab_vision.py
ops/: mnemosyne-user.service
scripts/: bootstrap-prod.sh  deploy-fly.sh  dogfood-argus-vision.sh  dogfood-invite.sh  dogfood-plutus-link.sh  dogfood-plutus-prod.sh  import-mise-gallery.sh  install-service.sh  run-cogs-benchmark.sh  start-mnemosyne.sh  validate-env.sh  wire-argus.sh  wire-minio.sh  wire-mise.sh  wire-public-url.sh  wire-r2.sh  wire-suite-integration.sh
src/mnemosyne/: __init__.py  __main__.py  albums.py  arc.py  arrange.py  auth.py  baseline.py  billing.py  config.py  curate.py  db.py  edits.py  evaluate.py  export.py  ingest.py  layout.py  main.py  mise_client.py  mise_import.py  pipeline.py  plutus_api.py  plutus_auto.py  plutus_link.py  proposal.py  runtime.py  share.py  signals.py  storage.py  themes.py  urls.py  usage.py  vision.py  waitlist.py  worker.py
src/mnemosyne/migrations/: 0001_schema.sql  0002_waitlist.sql  0003_users.sql  0004_album_status.sql  0005_album_claimed_at.sql  0006_album_claim_token.sql  0007_album_job_metadata.sql  0008_photos_storage_key.sql  0009_inference_usage.sql  0010_album_share.sql  0011_album_theme_plutus.sql  0013_billing.sql  (+4 more)
templates/: account.html  album.html  album_status.html  albums.html  billing.html  delete_confirm.html  forgot_password.html  import_mise.html  landing.html  login.html  new_album.html  privacy.html  reset_password.html  share.html  signup.html  terms.html
tests/: conftest.py  test_account_lifecycle.py  test_arc.py  test_arrange.py  test_arrange_engine.py  test_arrange_grok.py  test_auth.py  test_baseline.py  test_billing.py  test_conformance.py  test_curate.py  test_db.py  test_delete.py  test_edits.py  test_evaluate.py  test_export.py  test_layout.py  test_mise_import.py  test_mise_signals.py  test_plutus_api.py  test_plutus_auto.py  test_plutus_link.py  test_proposal.py  test_proposal_cache.py  test_reference_originals.py  test_regenerate.py  test_runtime.py  test_share.py  test_storage.py  test_themes.py  test_trust_pages.py  test_upload.py  test_urls_cogs_ui.py  test_usage.py  test_vision_argus.py  test_vision_grok.py  test_waitlist.py  test_worker.py
