[project]
name = "mnemosyne"
version = "0.0.1"
description = "AI album designer for photographers — gallery in, drafted spreads out"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "jinja2",
    "uvicorn[standard]",
    "pillow",
    "httpx",
    "reportlab",
    "python-multipart",   # parse HTML form POSTs (the waitlist + login/signup forms)
    "python-dotenv",      # load .env (gitignored) so XAI_API_KEY stays off the shell/repo
    "itsdangerous",       # signs the session cookie for Starlette SessionMiddleware
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
